[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal-core = { path = "../wal-core" }
wal-rsx = { path = "../wal-rsx" }
wal-css = { path = "../wal-css" }
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = ["HtmlInputElement"]
