[package]
name = "wal-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal-vdom = { path = "../wal-vdom" }
wal-macros = {path = "../wal-macros" }

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }