[package]
name = "wal-css"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.10.0", features = ["utils"] }
nom = "7.1.3"
regex = "1.10.2"
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "Element",
    "Node",
    "Text",
    "Window",
]


