[package]
name = "wal-css"
version = "0.1.1"
edition = "2021"
authors = ["Wojciech Kutak", "Karol Kącki", "Marcin Latoszek"]
repository = "https://github.com/walrust/wal"
homepage = "https://github.com/walrust/wal"
documentation = "https://docs.rs/wal-css/"
license = "MIT OR Apache-2.0"
keywords = ["web", "wasm", "frontend", "spa", "webassembly"]
categories = ["gui", "web-programming", "wasm"]
description = "A framework for creating client-side single-page apps using Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.10.0", features = ["utils"] }
nom = "7.1.3"
regex = "1.10.2"
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "Document",
    "Element",
    "Node",
    "Text",
    "Window",
]


