[package]
name = "wal-routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal = { path = "../wal" }
wal-rsx = { path = "../wal-rsx" }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
gloo = { version = "0.10.0", features = ["utils"] }

[dependencies.web-sys]
version = "0.3.64"
features = ["Document", "Element", "Node", "Text", "Window", "EventTarget"]
