[package]
name = "wal-routing"
version = "0.1.0"
edition = "2021"
authors = ["Wojciech Kutak", "Karol Kącki", "Marcin Latoszek"]
repository = "https://github.com/walrust/wal"
homepage = "https://github.com/walrust/wal"
documentation = "https://docs.rs/wal-routing/"
license = "MIT OR Apache-2.0"
keywords = ["web", "wasm", "frontend", "spa", "webassembly"]
categories = ["gui", "web-programming", "wasm"]
description = "A framework for creating client-side single-page apps using Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal = { version = "0.1.0", path = "../wal" }
wal-rsx = { version = "0.1.0", path = "../wal-rsx" }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
gloo = { version = "0.10.0", features = ["utils"] }

[dependencies.web-sys]
version = "0.3.64"
features = ["Document", "Element", "Node", "Text", "Window", "EventTarget"]
