[package]
name = "wal-rsx"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
web-sys = { version = "0.3", features = ["DragEvent", "MouseEvent"] }
wal = { path = "../wal" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
once_cell = "1.18"
