[package]
name = "wal-rsx"
version = "0.1.1"
edition = "2021"
authors = ["Wojciech Kutak", "Karol Kącki", "Marcin Latoszek"]
repository = "https://github.com/walrust/wal"
homepage = "https://github.com/walrust/wal"
documentation = "https://docs.rs/wal-rsx/"
license = "MIT OR Apache-2.0"
keywords = ["web", "wasm", "frontend", "spa", "webassembly"]
categories = ["gui", "web-programming", "wasm"]
description = "A framework for creating client-side single-page apps using Rust."

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
web-sys = { version = "0.3", features = ["DragEvent", "MouseEvent"] }
wal-core = { path = "../wal-core" }
wal-css = { path = "../wal-css" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
once_cell = "1.18"
