[package]
name = "wal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal-component = {path = "../wal-component"}
wal-vdom = {path = "../wal-vdom"}

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console", 
    "Window",
    "Document",
    "Node",
    "Element",
    "Text",
]