[package]
name = "wal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal-macros = { path = "../wal-macros" }
gloo = { version = "0.10.0", features = ["utils"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
itertools = "0.11"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "AnimationEvent",
    "console",
    "Document",
    "DragEvent",
    "Element",
    "FocusEvent",
    "InputEvent",
    "KeyboardEvent",
    "Node",
    "MouseEvent",
    "PointerEvent",
    "ProgressEvent",
    "SubmitEvent",
    "Text",
    "TouchEvent",
    "TransitionEvent",
    "WheelEvent",
    "Window",
]
