[package]
name = "wal"
version = "0.1.0"
edition = "2021"
authors = ["Wojciech Kutak", "Karol Kącki", "Marcin Latoszek"]
repository = "https://github.com/walrust/wal"
homepage = "https://github.com/walrust/wal"
documentation = "https://docs.rs/wal/"
license = "MIT OR Apache-2.0"
keywords = ["web", "wasm", "frontend", "webasm", "webassembly", "spa"]
categories = ["gui", "web-programming", "wasm"]
description = "A framework for creating client-side single-page apps using Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal-rsx = { path = "../wal-rsx" }
gloo = { version = "0.10.0", features = ["utils"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
itertools = "0.11"
console_error_panic_hook = "0.1.7"
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "AnimationEvent",
    "console",
    "Document",
    "DragEvent",
    "Element",
    "FocusEvent",
    "InputEvent",
    "KeyboardEvent",
    "Node",
    "MouseEvent",
    "PointerEvent",
    "ProgressEvent",
    "SubmitEvent",
    "Text",
    "TouchEvent",
    "TransitionEvent",
    "WheelEvent",
    "Window",
]
