[package]
name = "custom_components_playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
wal = { path = "../../wal" }
wal-macros = { path = "../../wal-macros" }
wal-css = { path = "../../wal-css" }
gloo = { version = "0.10.0", features = ["utils"] }

[dependencies.web-sys]
version = "0.3.64"
features = ["MouseEvent"]
