[package]
name = "routing-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
wal-routing = { path = "../../wal-routing" }
wal = { path = "../../wal" }
wal-rsx = { path = "../../wal-rsx" }

[dependencies.web-sys]
version = "0.3.64"
features = ["MouseEvent"]
