[package]
name = "vdom_playground"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
wal = { path = "../../wal" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
serde-wasm-bindgen = "0.5.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console", 
    "Window",
    "Document",
    "Node",
    "Element",
]

[dependencies.gloo]
version = "0.10.0"
features = [
    "utils",
]

[tasks.build]
command = "wasm-pack"
args = ["build", "--target", "web"]
